# Multicore-Programming

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md
Assignments/: CMakeLists.txt  README.md
Assignments/CUDA/: CMakeLists.txt  README.md  main.cpp
Assignments/Galaxy-Collider/: Galaxy-Collider.cpp  README.md
Assignments/Galaxy-Collider/src/: AppController.cpp  AppController.h  Camera.cpp  Camera.h  Galaxy.cpp  Galaxy.h  ObjectColors.h  Particle.cpp  Particle.h  Quadrant.cpp  Quadrant.h
Assignments/OpenCL/: README.md
Assignments/OpenCL/NBody/: CMakeLists.txt  Main.cpp  NBody.cpp  NBody.hpp  NBody_Kernels.cl
Notes/: Lecture1.md  Lecture2.md  Lecture3.md  Lecture4.md  Lecture5.md  Lecture6.md
